test/invalid/FieldOverrideAbstract/AbstractSuper.plume
/**
 * Uma classe que tem um field name valido por agora
 *
 * @author 37059, Rita Henriques
 * @version $Id: AbstractSuper.plume 286 2012-05-01 10:24:19Z tcomp000 $
 */
abstract class AbstractSuper extends Object is
	
  field name : String
  
  abstract method getName : () -> String
